mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_index_non_list.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_index_non_list.mux`
error: Cannot index non-list type
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_index_non_list.mux:3:1
   |
 3 | s[0]
   | ^
   |
= help: Only lists and maps can be indexed with '[]'. Examples: my_list[0], my_map['key']
